--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         <h2>Vamos conversar?</h2>
         <p>Pronto para dar o próximo passo? Me chame para tirar suas dúvidas ou solicitar um orçamento.</p>
         <div class="social-buttons">
-            <a href="https://wa.me/554796379491" target="_blank" class="social-button whatsapp-button"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-            <a href="https://www.linkedin.com/in/rodrigo-lima" target="_blank" class="social-button linkedin-button"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            <a href="https://github.com/seuperfil" target="_blank" class="social-button github-button"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://wa.me/5511950837145" target="_blank" class="social-button whatsapp-button"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+            <a href="https://www.linkedin.com/in/rodrigo-lima-6630b42a4/" target="_blank" class="social-button linkedin-button"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="https://github.com/RodrigoLima1508" target="_blank" class="social-button github-button"><i class="fab fa-github"></i> GitHub</a>
         </div>
     </section>
 
