--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </div>
             <div class="sobre-texto">
                 <h2>Sobre Mim</h2>
-                <p>Olá! Meu nome é Rodrigo e sou um desenvolvedor web apaixonado por transformar ideias em soluções digitais eficientes. Como jovem aprendiz de TI, utilizo tecnologias de ponta, incluindo o poder da inteligência artificial, para criar sites e sistemas que não apenas impressionam, mas também entregam valor real aos meus clientes.</p>
-                <p>Meu objetivo é construir experiências online que se destacam pela qualidade, design e funcionalidade. Sinta-se à vontade para explorar meu portfólio e ver o que posso fazer por você!</p>
+                <p>Olá! Meu nome é Rodrigo, tenho 20 anos e sou estudante de Ciência da Computação. Minha jornada no mundo do desenvolvimento web começou com o objetivo de transformar ideias em soluções digitais que realmente funcionam. Sou apaixonado por criar sites e sistemas que não apenas impressionam visualmente, mas também entregam valor e geram resultados.</p>
+                <p>Meu objetivo é construir experiências online que se destacam pela qualidade, design e funcionalidade. Sinta-se à vontade para explorar meu portfólio e entre em contato para fazermos um orçamento para o seu projeto!</p>
             </div>
         </div>
     </section>
